# NEDISS

./: .appveyor.yml  .gitignore  .lgtm.yml  .lgtm.yml.swp  .travis.yml  BUGS.txt  CMakeLists.txt  CliqueGraph_8h_source.html  CommunicationFunctions_8h_source.html  DEBUG.COMMANDS.txt  Doxyfile  ErdosRenyiGraph_8h_source.html  EulerSolver_8h_source.html  GeneralDifferentialEquation_8h_source.html  GeneralGraph_8h_source.html  GeneralSolver_8h_source.html  GraphFunctions_8h_source.html  GridGraph_8h_source.html  LinearTestEquation_8h_source.html  NextSteps.todo  NoiselessKuramoto_8h_source.html  README.md  RingGraph_8h_source.html  RungeKuttaSolver_8h_source.html  ScaleFreeGraph_8h_source.html  SimulationPipe_8h_source.html  SmallWorldGraph_8h_source.html  a.out  annotated.html  capture_period.sh  classCliqueGraphObject-members.html  classCliqueGraphObject.html  classCliqueGraphObject__coll__graph.md5  classCliqueGraphObject__inherit__graph.map  classCommonGraphObjectClass-members.html  classCommonGraphObjectClass.html  classCommonGraphObjectClass__inherit__graph.map  classCommonGraphObjectClass__inherit__graph.md5  classErdosRenyiGraphObject-members.html  classErdosRenyiGraphObject.html  (+167 more)
Communication/: ComFuns.backup.h  CommunicationFunctions.cpp  CommunicationFunctions.h  CommunicationFunctions2.h  perform_request.cpp.backup
DifferentialEquations/: GeneralDifferentialEquation.cpp  GeneralDifferentialEquation.h  LinearTestEquation.cpp  LinearTestEquation.h  NoiselessKuramoto.cpp  NoiselessKuramoto.h
GraphClasses/: CliqueGraph.cpp  CliqueGraph.h  ErdosRenyiGraph.cpp  ErdosRenyiGraph.h  GeneralGraph.cpp  GeneralGraph.h  GraphFunctions.cpp  GraphFunctions.h  GraphFunctions.h.quickbackup.18nov  GridGraph.cpp  GridGraph.h  RingGraph.cpp  RingGraph.h  ScaleFreeGraph.cpp  ScaleFreeGraph.h  SmallWorldGraph.cpp  SmallWorldGraph.h
MPI_playground/: a.out  tmp.txt  toy.cpp  toyscript.sh  toyscript2.sh
Simulation/: Simulation.cpp  SimulationExample.h  SimulationPipe.h
Solvers/: EulerSolver.cpp  EulerSolver.h  GeneralSolver.cpp  GeneralSolver.h  GeneralSolvers.cpp  GeneralSolvers.h  RungeKuttaSolver.cpp  RungeKuttaSolver.h
Tests/: TestsIndex.md  graph-test-init.cpp  graph-test-init.h  graph-test-singlestep-evolution.cpp  graph-test-singlestep-evolution.h  long-singlestep-run.cpp  long-singlestep-run.h  solvers-test-init.cpp  solvers-test-init.h  test-imports.h
Utils/: DependencyTreeAndCoverage.odp  HelperClasses.cpp  HelperClasses.h  adequate_synchronization.cpp  adequate_synchronization.h  certify_compliant.cpp  certify_compliant.h  differential_equations_aux.cpp  differential_equations_aux.h  display_vectors.cpp  display_vectors.h  global_standard_messages.h  memory_management.cpp  memory_management.h  msleep.cpp  msleep.h  parallel_sanitizer.h  print_init.cpp  print_init.h  print_warnings.cpp  print_warnings.h  reproductibility.cpp  timers.cpp  typed_combinations.h
classes/: graph.cpp  graph.h
graphic/: GRAPHVIZ.md
html/: CliqueGraph_8h_source.html  CommunicationFunctions_8h_source.html  ErdosRenyiGraph_8h_source.html  EulerSolver_8h_source.html  GeneralDifferentialEquation_8h_source.html  GeneralGraph_8h_source.html  GeneralSolver_8h_source.html  GraphFunctions_8h_source.html  GridGraph_8h_source.html  LinearTestEquation_8h_source.html  NoiselessKuramoto_8h_source.html  (+151 more)
(+143 files in other folders)
